--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ h1 {
     letter-spacing: 3px;
 }
 
+#project{
+    color:rgb(255, 255, 255);
+    background-color: rgb(44, 110, 49);
+}
+
 .title{
     font-size: 30px;
     text-align: center;
