--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 h1 {
     color:rgb(255, 255, 255);
-    background-color: rgb(44, 110, 49);
     font-family: "Do Hyeon", sans-serif;
     text-align: center;
     letter-spacing: 3px;
 }
 
+h2 {
+    color:rgb(255, 255, 255);
+    background-color: rgb(187, 209, 145);
+    font-family: "Do Hyeon", sans-serif;
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+
 #project{
     color:rgb(255, 255, 255);
-    background-color: rgb(44, 110, 49);
+    background-color: rgba(245, 243, 220, 0.822);
+    text-align: center;
 }
 
 .title{
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     font-family: "Do Hyeon", sans-serif;
 }
@@ -48,6 +57,7 @@ body{
 nav{
     font-family: "Orbit", sans-serif;
     font-size: 15px;
+    text-align: center;
 }
 
 p{
@@ -59,7 +69,7 @@ p{
 }
 
 header {
-    background: rgb(44, 110, 49);
+    background-color: rgb(44, 110, 49);
     color: white;
     padding-left: 32px;
     padding-right: 32px;
@@ -98,4 +108,118 @@ a:hover, a:active {
 .field{
     background-color: rgb(44, 110, 49);
     text-align: center;
+}
+
+@media screen and (min-width: 960px) {
+
+
+    .grid-container {
+        display: grid;
+        grid-template-rows: 50% auto;
+        grid-template-columns: 20% 60% auto;
+        grid-template-areas:
+            "intro study team"
+            "field study team";
+        justify-items: stretch;
+    }
+
+
+    #field {
+        grid-area: field;
+    }
+
+    #intro {
+        grid-area: intro;
+    }
+
+    #study {
+        grid-area: study;
+    }
+
+    #project {
+        grid-area: team;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width: 959px) {
+
+    fieldset{
+        color: rgb(44, 110, 49);
+        justify-content: center;
+        align-items: center;
+    }
+
+    #img {
+        width: auto;
+        margin: 0% auto;
+        text-align: center;
+    }
+    .grid-container {
+        display: grid;
+        grid-template-rows: 30% 10% auto;
+        grid-template-columns: 70% auto;
+        grid-template-areas:
+            "intro team"
+            "field field"
+            "study study";
+
+    }
+
+
+
+    #intro {
+        grid-area: intro;
+    }
+
+    #field {
+        grid-area: field;
+    }
+
+    #study {
+        grid-area: study;
+    }
+
+    #project {
+        grid-area: team;
+    }
+}
+
+@media screen and (max-width: 639px) {
+
+
+    #img {
+        width: 70%;
+        margin: auto;
+        text-align: center;
+
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-rows: 10% 20% 40% auto;
+        grid-template-areas:
+            "field"
+            "team"
+            "intro"
+            "study"
+            ;
+
+    }
+
+    #field {
+        grid-area: field;
+    }
+
+
+    #intro {
+        grid-area: intro;
+    }
+
+    #study {
+        grid-area: study;
+    }
+
+    #projectTeam {
+        grid-area: team;
+    }
 }
